Remove unused default.toml and align docs to default_config.toml

--- a/docs/architecture/5.1 Tech Overview – Tri-Śarīra RPG.md
+++ b/docs/architecture/5.1 Tech Overview – Tri-Śarīra RPG.md
@@ -164,7 +164,7 @@ Assets zijn **niet** de focus van deze spec, maar folderstructuur sluit aan op 5
 
 Implementatie (aanbevolen):
 
-- `config/default.toml` – standaardwaarden.  
+- `config/default_config.toml` – standaardwaarden.  
 - `config/dev.toml` – dev overrides (niet voor release).  
 - Kleine `Config`-klasse die dit samenvoegt.
 
