--- a/docs/architecture/5.3 Folder- & Module-structuur – Tri-Śarīra RPG.md
+++ b/docs/architecture/5.3 Folder- & Module-structuur – Tri-Śarīra RPG.md
@@ -289,11 +289,11 @@ assets/
 
 ```text
 config/
-├─ default.toml
+├─ default_config.toml
 └─ dev.toml
 ```
 
-- `default.toml` – standaardinstellingen (resolutie, fullscreen, volume, keybinds).  
+- `default_config.toml` – standaardinstellingen (resolutie, fullscreen, volume, keybinds).  
 - `dev.toml` – overrides voor ontwikkelomgeving (debug flags, skip intro, loglevel).  
 - In code geladen door `core.config.Config`.
 
@@ -366,7 +366,7 @@ Voor A2 (vertical slice) moeten minimaal bestaan:
 - `maps/z_r1_chandrapur_town.tmx`, `z_r1_forest_route.tmx`, `z_r1_shrine_clearing.tmx`  
 - `schema/*.schema.json` als basis (hoeft nog niet allemaal used-in-code te zijn).  
 - `tools/validate_data.py` (basic versie).  
-- `config/default.toml` + `config/dev.toml` (basic).
+- `config/default_config.toml` + `config/dev.toml` (basic).
 
 Met deze structuur kan Codex/Claude **zonder discussie** nieuwe modules aanmaken en weet jij altijd waar iets hoort te liggen.
 
@@ -380,4 +380,3 @@ Met deze structuur kan Codex/Claude **zonder discussie** nieuwe modules aanmaken
 - 4.3 Tiled Conventions bepaalt hoe `maps/` en `assets/tilesets/` gevuld worden.
 
 Versie 0.1 is **bewust concreet maar niet verstikkend**: structuur ligt vast, maar de exacte klassennamen en interne submodules kunnen tijdens implementatie verder uitgewerkt worden.
-
