--- a/docs/architecture/5.5 Run- & Build-instructies – Tri-Śarīra RPG.md
+++ b/docs/architecture/5.5 Run- & Build-instructies – Tri-Śarīra RPG.md
@@ -149,7 +149,7 @@ Dan kun je in WSL gewoon:
 
 ### 4.1 Bestanden
 
-- `config/default.toml` – basisinstellingen:  
+- `config/default_config.toml` – basisinstellingen:  
   - resolutie, fullscreen/windowed, framerate, audio-volume, keybinds, data/asset-paden.  
 - `config/dev.toml` – overrides voor ontwikkelmodus:  
   - `debug = true`,  
@@ -160,7 +160,7 @@ Dan kun je in WSL gewoon:
 
 `core.config.Config` leest:
 
-1. `default.toml`  
+1. `default_config.toml`  
 2. `dev.toml` (optioneel, overschrijft defaults)  
 3. eventueel env-variabelen (bv. `TSR_MODE=dev`)
 
@@ -366,4 +366,3 @@ Een typische ontwikkelsessie in WSL zou er zo uit kunnen zien:
 
 Deze README is versie 0.1.  
 Als tijdens het werken blijkt dat stappen ontbreken of anders lopen (bv. specifieke WSL-issues, asset-paden, extra tools), wordt deze sectie bijgewerkt zodat zowel jij als AI-assistenten altijd een actuele "single source of truth" hebben voor run- & build-instructies.
-
